renamed css file

--- a/src/components/pages/styles.css
+++ b/src/components/pages/styles.css
@@ -14,3 +14,8 @@
     opacity: 0.55;
 }
 
+.css-11iaw3 {
+    margin-top: 0 !important;
+    min-height: 100vh;
+    background-color: #0a0a4a !important;
+}
