--- a/src/components/pages/styles.css
+++ b/src/components/pages/styles.css
@@ -45,3 +45,41 @@
     margin-bottom: 0;
     opacity: 0.65;
 }
+
+  .g-signin-upload-container {
+    background-color: rgb(239, 239, 239);
+    border-radius: 6px;
+    padding: 10px;
+    margin: auto;
+    max-width: 400px; 
+    margin-top: 80px;
+  }
+  
+  .g-signin-border-container {
+    border-radius: 6px;
+    padding: 20px 25px;
+  }
+  
+  .g-signin-border-container span {
+    color: #130f40;
+    font-weight: 600;
+    font-size: 1.1em;
+    letter-spacing: -1px;
+    margin-top: 30px;
+    margin-bottom: 0;
+    opacity: 0.65;
+  }
+
+  .g-img {
+    background-image: url('../../assets/google-logo.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100%;
+  }
+
+  .g-signin-btn {
+    color: #6b74bf;
+    font-weight: 550;
+    
+  }
